[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player Lock Charging.wav" type="AudioStream" id=1]
[ext_resource path="res://Player/Player Lock Lost.wav" type="AudioStream" id=2]
[ext_resource path="res://Player/Enemy Lock Lost.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/Enemy Lock Warning.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/Enemy Lock Sustained.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/Sounds.gd" type="Script" id=6]

[node name="Sounds" type="Node"]
script = ExtResource( 6 )

[node name="EnemyLockLost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EnemyLockSustained" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="EnemyLockWarning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayerLockCharging" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="PlayerLockLost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
